--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ path = "jupyterhub_home_nfs/__init__.py"
 github_url = "https://github.com/2i2c-org/jupyterhub-home-nfs"
 
 [tool.tbump.version]
-current = "1.0.1"
+current = "1.0.2-0.dev"
 regex = '''
   (?P<major>\d+)
   \.
