Squash all users to one particular uid and gid

--- a/helm/jupyterhub-home-nfs/templates/configmap.yaml
+++ b/helm/jupyterhub-home-nfs/templates/configmap.yaml
@@ -22,7 +22,7 @@ data:
             Anonymous_uid = 1000;
             Anonymous_gid = 1000;
             Access_Type = RW;
-            Squash = No_Root_Squash;
+            Squash = All_Squash;
             SecType = "sys";
         }
 
