--- a/chartpress.yaml
+++ b/chartpress.yaml
@@ -1,6 +1,6 @@
 charts:
   - name: jupyterhub-home-nfs
-    baseVersion: 1.0.2-0.dev
+    baseVersion: 1.1.0
     chartPath: helm/jupyterhub-home-nfs
     imagePrefix: ghcr.io/2i2c-org/
     repo:
