--- a/helm/jupyterhub-home-nfs/values.yaml
+++ b/helm/jupyterhub-home-nfs/values.yaml
@@ -64,6 +64,8 @@ quotaEnforcer:
       min_projid: 1000
       exclude: []
       quota_overrides: {}
+      uid: 1000
+      gid: 1000
 
   # The keys and values below are rendered by a k8s Secret and mounted as a .py
   # file together with quota-enforcer-config.py. These are then executed by the
