--- a/helm/jupyterhub-home-nfs/Chart.yaml
+++ b/helm/jupyterhub-home-nfs/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: jupyterhub-home-nfs
 description: A Helm chart for an in-cluster NFS server with storage quota enforcement
-version: 1.2.0
-appVersion: 1.2.0
+version: 1.2.1-0.dev
+appVersion: 1.2.1-0.dev
