--- a/helm/jupyterhub-home-nfs/templates/deployment.yaml
+++ b/helm/jupyterhub-home-nfs/templates/deployment.yaml
@@ -37,6 +37,10 @@ spec:
           {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      {{- with .Values.initContainers }}
+      initContainers:
+        {{- tpl (. | toYaml) $ | nindent 8 }}
+      {{- end }}
       containers:
       - name: nfs-server
         image: "{{ .Values.nfsServer.image.repository }}:{{ .Values.nfsServer.image.tag }}"
