--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     privileged: true # Needed for mounting XFS
     volumes:
       - ./jupyterhub_home_nfs:/app
-    command: /usr/local/bin/start.sh
 
   test:
     profiles: ["test"] # This service will only run when explicitly requested
@@ -19,6 +18,6 @@ services:
     volumes:
       - ./jupyterhub_home_nfs:/app
       - ./tests:/app/tests
-    command: sh -c "/usr/local/bin/mount-xfs.sh && python3 -m pytest -v /app/tests/tests.py"
+    command: ["/bin/bash", "-c", "/usr/local/bin/mount-xfs.sh && python3 -m pytest -v /app/tests/tests.py"]
     environment:
       - PYTHONPATH=/app
