--- a/helm/jupyterhub-home-nfs/values.schema.yaml
+++ b/helm/jupyterhub-home-nfs/values.schema.yaml
@@ -1,4 +1,4 @@
-$schema: 'http://json-schema.org/draft-07/schema#'
+$schema: "http://json-schema.org/draft-07/schema#"
 type: object
 properties:
   nfsServer:
@@ -176,4 +176,3 @@ required:
   - prometheusExporter
   - persistentVolume
   - service
-
